1999-04-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (vj_FIND_JDK): Add check for $jdkdir/include/winnt.
	(md_CHECK_JNI_H): New macro.

	* acxpm.m4 (md_FIND_XPM): Use AC_TRY_COMPILE instead of simple
	file tests.  Add messages.  Don't do xpm.h tests if gnuwin32.
	(md_STRUCT_XPM_ALLOCPIXELS): Use X11/xpm.h or xpm.h depending on
	above.

1999-04-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acxpm.m4 (md_FIND_XPM): Check for xpm.h in $xpmincludedir
	and $xpmincludedir/X11, and define HAVE_X11_XPM_H or HAVE_XPM_H.

1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add it.

	* acsizes.m4 (md_CHECK_SIZES): New file, new macro.

1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acxpm.m4 (md_STRUCT_XPM_ALLOCPIXELS): New macro.

	* acjdk.m4 (JAVASWARMSCRIPTS): New substitution.	

1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (JAVASWARMLIBS): New substitution.

1999-04-24  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acargp.m4.

	* acargp.m4: New file.

1999-04-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: New substitution JAVACMD, and JAVAENV (used in JAVA, 
	when present).

1999-04-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Use libexec/Kaffe instead of bin/Kaffe.
	Prepend $JAR_CLASSPATH as CLASSPATH for jar if it is set.

1999-04-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4: Add JAR substitution (include set of JAVA_HOME).
	(JAVAINCLUDES): Use solaris or genunix alternatively (not both),
	depending on existance of $jdkdir/include/solaris/jni_md.h.
	(JAVASTUBS_FUNCTION):  Substitute. Avoid Unicode mangling for Kaffe.
	(JAVALIBS, JAVAC): Substitute.
	(JAVA): For Kaffe, set LD_LIBRARY_PATH to JAVALIBS.

1999-04-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* acjdk.m4 (jv_FIND_JDK): Use simply the japhar datadir instead of